<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="app_choice">App Choice:</string>
    <string name="user_choice">Choose between rock, paper and scissors:</string>
    <string name="rock">👊</string>
    <string name="rock_text">Rock</string>
    <string name="paper">🖐️</string>
    <string name="paper_text">Paper️</string>
    <string name="scissors">✌️</string>
    <string name="scissors_text">Scissorss</string>
    <string name="you_lost">You lost! ☹️</string>
    <string name="you_won">You won! 🥳</string>
    <string name="draw">Draw! 😬</string>
    <string name="game_result">Your choice: %1$s\nApp choice: %2$s</string>
    <string name="image_rock_description">circle container for a fist emoji, that represents a rock</string>"
    <string name="image_paper_description">circle container for an open hand emoji, that represents a paper</string>"
    <string name="image_scissor_description">circle container for a hand making an "V" emoji, that represents a scissor</string>"
</resources>